--- a/resources/sass/_categories.scss
+++ b/resources/sass/_categories.scss
@@ -1,5 +1,7 @@
 .categoires {
     border: 1px solid #ddd;
+    // height: 430px;
+    // overflow-y: auto;
     .cat-title {
         padding: 13px;
         background-color: $green;
