--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -12,6 +12,7 @@
     }
     .cat-list.collapse {
         display: block;
+        background-color: #fff;
     }
     .fa-chevron-down {
         margin-left: 92px;
