--- a/resources/sass/_index.scss
+++ b/resources/sass/_index.scss
@@ -125,7 +125,24 @@ p {
 .card-wrapper {
     display: flex;
     margin-top: 20px;
+    position: relative;
     .product-card {
+        .product-price {
+            margin-top: 10px;
+            display: flex;
+            h4 {
+                font-weight: 700;
+                font-size: 16px;
+                // color: $green;
+            }
+            .old_price {
+                margin-left: 15px;
+                color: #999;
+                font-weight: 400;
+                text-decoration: line-through;
+                font-family: 'roboto';
+            }
+        }
         position: relative;
         margin: 0 20px;
         &:hover {
@@ -201,11 +218,13 @@ p {
         }
         .product-price {
             margin-top: 10px;
+
             h4 {
                 font-weight: 700;
                 font-size: 16px;
                 // color: $green;
             }
+         
         }
         .add-hover {
             display: flex;
@@ -443,13 +462,15 @@ p {
     }
 .card-wrapper {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 20px;
     .product-card {
         position: relative;
         margin: 0 20px;
+        margin-top: 30px;
         &:hover {
             .add-hover {
-                bottom: -40px;
+                bottom: -2%;
                 opacity: 1;
             }
         }
@@ -520,17 +541,25 @@ p {
         }
         .product-price {
             margin-top: 10px;
+            display: flex;
             h4 {
                 font-weight: 700;
                 font-size: 16px;
                 // color: $green;
+            }
+            .old_price {
+                margin-left: 15px;
+                color: #999;
+                font-weight: 400;
+                text-decoration: line-through;
+                font-family: 'roboto';
             }
         }
         .add-hover {
             display: flex;
             align-items: center;
             position: absolute;
-            bottom:-15px;
+            bottom:10%;
             opacity: 0;
             transition: all .3s;
             .add-to-card {
@@ -580,4 +609,110 @@ p {
 }
 .card-wrapper-2 {
     margin-top:50px !important;
+}
+
+.no_new_product_ajax {
+    text-align: center;
+    font-weight: bold;
+}
+
+  
+.lds-roller {
+    background: #fff;
+    width: 100%;
+    height: 101%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 1;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: $green;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+#loader_feature {
+    background: #fff;
+    width: 100%;
+    height: 74%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 1;
 }
