--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -8,3 +8,11 @@
         border-color: $green;
     }
 }
+
+a {
+    color: #000;
+    &:hover {
+        color: #000;
+        text-decoration: none;
+    }
+}
