--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@
 @import "~noty/src/noty.scss";
 @import "~noty/src/themes/mint.scss";
 
+@import "../../node_modules/jquery-ui/themes/base/all.css";
+
 @import 'index';
 @import 'header';
 @import 'categories';
@@ -22,3 +24,5 @@
 @import 'navbar';
 @import 'custom';
 @import 'shop';
+@import 'shopDetails';
+@import 'mycart';
