--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15219,4 +15219,65 @@ a:hover {
   opacity: 0;
 }
 
+.checkout_box {
+  padding: 20px;
+}
+
+.checkout_box label {
+  color: #666666;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.checkout_box .blanks {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.order_summary {
+  background-color: #f5f5f5;
+  padding: 20px;
+}
+
+.order_summary .show_item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.order_summary .show_item .img {
+  width: 20%;
+}
+
+.order_summary .show_item img {
+  width: 70%;
+}
+
+.order_summary .show_item .name .name_p {
+  font-size: 14px;
+  font-family: "roboto";
+  font-weight: 700;
+  color: #666666;
+}
+
+.order_summary .show_item .name .qty_p {
+  font-size: 14px;
+  font-family: "roboto";
+  font-weight: 400;
+  color: #666666;
+}
+
+.order_summary .show_item .price span {
+  font-size: 15px;
+  font-family: "roboto";
+  font-weight: 400;
+}
+
+.order_summary .total {
+  text-align: right;
+  font-size: 18px;
+}
+
 
