--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -1,3 +1,8 @@
+.custom-navbar {
+    @media (max-width:768px) {
+        display: none !important;
+    }
+}
 #navbar {
     position: relative;
     .cat-title {
