--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -8,6 +8,9 @@
             margin-top: 23px;
             letter-spacing: 1px;
             color: #333;
+            @media (max-width:$mobile) {
+                margin-top: 0;
+            }
         }
         >img{
             margin-bottom: 30px;
@@ -37,6 +40,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        @media (max-width:$mobile) {
+            align-items: flex-start;
+            margin-top: 20px;
+        }
         ul {
             list-style-type: none;
             padding: 0;
@@ -55,6 +62,9 @@
         }
         > h4 {
             margin-bottom: 20px;
+            @media (max-width:$mobile) {
+                margin-bottom: 0px;
+            }
         }
     }
     .Contact-Us {
